--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   <p>Rick Ross, Musician</p>
                   <h3>
                     "Loving this! Just picked it up the other day. Thank you for
-                    the work you put into this."
+                    the work you put into this." nah jk lmao
                   </h3>
                 </div>
               </div>
