--- a/index.html
+++ b/index.html
@@ -44,29 +44,6 @@
             <span class="icon-bar bar3"></span>
           </button>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="example">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="#">
-                <i class="fa fa-facebook-square"></i>
-                Like
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-twitter"></i>
-                Tweet
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-pinterest"></i>
-                Pin
-              </a>
-            </li>
-          </ul>
-        </div>
         <!-- /.navbar-collapse -->
       </div>
     </nav>
@@ -75,7 +52,7 @@
         <div class="parallax-background">
           <img
             class="parallax-background-image"
-            src="assets/img/template/bg3.jpg"
+            src="assests/img/Bitcoinjourney-59bb395bfc544bec875ede47429e7b9a.png"
           />
         </div>
         <div class="container">
@@ -242,71 +219,6 @@
                 </p>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="section section-testimonial">
-        <div class="container">
-          <h4 class="header-text text-center">What people think</h4>
-          <div
-            id="carousel-example-generic"
-            class="carousel fade"
-            data-ride="carousel"
-          >
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item">
-                <div class="mask">
-                  <img src="assets/img/faces/face-4.jpg" />
-                </div>
-                <div class="carousel-testimonial-caption">
-                  <p>Jay Z, Producer</p>
-                  <h3>
-                    "I absolutely love your app! It's truly amazing and looks
-                    awesome!"
-                  </h3>
-                </div>
-              </div>
-              <div class="item active">
-                <div class="mask">
-                  <img src="assets/img/faces/face-3.jpg" />
-                </div>
-                <div class="carousel-testimonial-caption">
-                  <p>Drake, Artist</p>
-                  <h3>
-                    "This is one of the most awesome apps I've ever seen! Wish
-                    you luck Creative Tim!"
-                  </h3>
-                </div>
-              </div>
-              <div class="item">
-                <div class="mask">
-                  <img src="assets/img/faces/face-2.jpg" />
-                </div>
-                <div class="carousel-testimonial-caption">
-                  <p>Rick Ross, Musician</p>
-                  <h3>
-                    "Loving this! Just picked it up the other day. Thank you for
-                    the work you put into this." nah jk lmao
-                  </h3>
-                </div>
-              </div>
-            </div>
-            <ol class="carousel-indicators carousel-indicators-blue">
-              <li
-                data-target="#carousel-example-generic"
-                data-slide-to="0"
-                class="active"
-              ></li>
-              <li
-                data-target="#carousel-example-generic"
-                data-slide-to="1"
-              ></li>
-              <li
-                data-target="#carousel-example-generic"
-                data-slide-to="2"
-              ></li>
-            </ol>
           </div>
         </div>
       </div>
