--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="assets/img/favicon.ico" />
+    <link rel="icon" type="image/png" href="assets4bitcoin/img/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>What is a Bitcoin?</title>
     <meta
@@ -11,8 +11,8 @@
     />
     <meta name="viewport" content="width=device-width" />
 
-    <link href="assets/css/bootstrap.css" rel="stylesheet" />
-    <link href="assets/css/landing-page.css" rel="stylesheet" />
+    <link href="assets4bitcoin/css/bootstrap.css" rel="stylesheet" />
+    <link href="assets4bitcoin/css/landing-page.css" rel="stylesheet" />
 
     <!--     Fonts and icons     -->
     <link
@@ -24,7 +24,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
+    <link href="assets4bitcoin/css/pe-icon-7-stroke.css" rel="stylesheet" />
   </head>
   <body class="landing-page landing-page1" style = "background-color: #313131;">
     <nav class="navbar navbar-transparent navbar-top" role="navigation">
@@ -52,7 +52,7 @@
         <div class="parallax-background">
           <img
             class="parallax-background-image"
-            src="assets/img/Bitcoinjourney-59bb395bfc544bec875ede47429e7b9a.png"
+            src="assets4bitcoin/img/Bitcoinjourney-59bb395bfc544bec875ede47429e7b9a.png"
           />
         </div>
         <div class="container">
@@ -61,7 +61,7 @@
               <div class="parallax-image">
                 <img
                   class="phone"
-                  src="assets/img/Bitcoin.png"
+                  src="assets4bitcoin/img/Bitcoin.png"
                   style="margin-top: 20px"
                 />
               </div>
@@ -130,7 +130,7 @@
               </div>
             </div>
             <div class="col-md-5 col-md-offset-1 hidden-xs">
-              <img src="assets/img/wallet-homepage.png" />
+              <img src="assets4bitcoin/img/wallet-homepage.png" />
             </div>
           </div>
         </div>
@@ -147,19 +147,19 @@
                 <div class="carousel-inner">
                   <div class="item">
                     <img
-                      src="assets/img/photo-1519755898819-cef8c3021d6f.jpg"
+                      src="assets4bitcoin/img/photo-1519755898819-cef8c3021d6f.jpg"
                       alt=""
                     />
                   </div>
                   <div class="item active">
                     <img
-                      src="assets/img/photo-1506378950192-d9fc7e45bc71.jpg"
+                      src="assets4bitcoin/img/photo-1506378950192-d9fc7e45bc71.jpg"
                       alt=""
                     />
                   </div>
                   <div class="item">
                     <img
-                      src="assets/img/photo-1518478164902-9e0290e8d7d8.jpg"
+                      src="assets4bitcoin/img/photo-1518478164902-9e0290e8d7d8.jpg"
                       alt=""
                     />
                   </div>
@@ -218,14 +218,14 @@
         </div>
       </div>
   </body>
-  <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+  <script src="assets4bitcoin/js/jquery-1.10.2.js" type="text/javascript"></script>
   <script
-    src="assets/js/jquery-ui-1.10.4.custom.min.js"
+    src="assets4bitcoin/js/jquery-ui-1.10.4.custom.min.js"
     type="text/javascript"
   ></script>
-  <script src="assets/js/bootstrap.js" type="text/javascript"></script>
+  <script src="assets4bitcoin/js/bootstrap.js" type="text/javascript"></script>
   <script
-    src="assets/js/awesome-landing-page.js"
+    src="assets4bitcoin/js/awesome-landing-page.js"
     type="text/javascript"
   ></script>
 </html>
